:adhesive_bandage: Fix overflow in cookie banner

--- a/projects/cookiePopup/style.css
+++ b/projects/cookiePopup/style.css
@@ -14,6 +14,11 @@
   justify-content: space-around;
   align-items: center;
   font-family: 'Poppins', sans-serif;
+  overflow: visible;
+}
+
+.cookie {
+  overflow: visible;
 }
 
 .text {
